--- a/style.css
+++ b/style.css
@@ -30,6 +30,8 @@ main{
     flex-wrap: wrap;
     padding: 20px;
     flex-grow: 1;
+
+   
     
 }
 h1{
@@ -45,6 +47,8 @@ h1{
     border-radius: 8px;
     margin: 20px;
 }
+
+
 .movie_img_rounded {
     border-radius: 3rem;
 }
@@ -53,19 +57,28 @@ h1{
     margin: 10px;
     padding: 10px;
     border-radius: 10px;
-    display: flex;
+
+   
+
     flex-direction: column;
     width: calc(33% - 20px);
     background-color: white;
     text-align: center;
-   
-    
+}
 
+.errorDiv{
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: x-large;
+    color: red;
+    display: flex;
+    place-items: center;
+    height: 100vh;
 }
 footer{
-    background-color: rgb(65, 65, 255);
+    background-color: black;
     height: 80px;
     width: 100%;
     margin-top: auto;
+    color: cyan;
     
 }
